fix: resolve Modulith dependency exposure with package-info